# linux-monitor

./: .clang-format  .gitignore  CMakeLists.txt  INSTALL_LIBBPF.md  LICENSE  README.md  install_libbpf.sh
bpf/: CMakeLists.txt  Makefile  net_monitor.bpf.c  net_monitor.bpf.o.backup  net_struct.h  vmlinux.h
client/: CMakeLists.txt
client/src/: main.cpp
docker/: Dockerfile  docker-compose.yml
grpc/client/: CMakeLists.txt
grpc/client/include/rpc/: client.hpp
grpc/client/src/: client.cpp
grpc/server/: CMakeLists.txt
grpc/server/include/rpc/: server.hpp
grpc/server/src/: server.cpp
include/: net_monitor.skel.h
kmod/: CMakeLists.txt  Makefile  cpu_load_monitor_kmod.c  cpu_softirq_monitor_kmod.c  cpu_stat_monitor_kmod.c
monitor/: CMakeLists.txt  CMakeLists.txt.backup
monitor/include/monitor/: cpu_load_monitor.hpp  cpu_softirq_monitor.hpp  cpu_stat_monitor.hpp  disk_monitor.hpp  mem_monitor.hpp  monitor_inter.hpp  net_monitor.hpp
monitor/include/utils/: read_file.hpp
monitor/src/: cpu_load_monitor.cpp  cpu_softirq_monitor.cpp  cpu_stat_monitor.cpp  disk_monitor.cpp  mem_monitor.cpp  net_monitor.cpp  read_file.cpp
performance_instance/: CMakeLists.txt
performance_instance/src/: performance_instance.cpp
performance_server/: CMakeLists.txt
performance_server/include/manager/: performance_server.hpp
performance_server/src/: performance_server.cpp
proto/: CMakeLists.txt  cpu_soft_irq.proto  cpu_stat.proto  disk_info.proto  mem_info.proto  monitor_info.proto  net_info.proto
server/: CMakeLists.txt
server/src/: main.cpp
sql/: init_server_performance.sql
test/: test.cpp  test_cpu_stat.c  test_softirq_monitor.c
